src/pages/HomePage.module.css
.newpaperImg {
  width: 36vw;
  float: right;
  margin-left: 50px;
}

.mainContent {
  /* display: grid;
  grid-template-columns: 1fr 1fr; */
  display: flex;
}

.mainText {
  color: rgb(248, 248, 255);
  font-family: Poppins;
  margin: 200px 60px 200px 190px;
  font-size: 18px;
}

.descriptionTitle {
  font-size: 48px;
  font-weight: 500;
  line-height: 70px;
  margin-bottom: 30px;
}

.description {
  font-weight: 400;
  line-height: 40px;
  width: 500px;
}

